--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -362,6 +362,12 @@
         color: var(--black);
         text-decoration: none;
         font-size: 14px;
+        transition: all 0.4s ease;
+    }
+
+    .fs-mobile-submenu a:hover {
+        color: var(--tan);
+        padding-left: 10px;
     }
 
     .fs-mobile-submenu .fs-dropdown-title {
