Update: daily changes

--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -4,7 +4,7 @@
     --tann: #A06D33;
     --tan: #A06D33;
     --gold: #D6AD60;
-    --beige: #f8dfc7;
+    --beige: #fff7f0;
     --dark: #3E2C1C;
     --black: #000000;
     --darker: #121212;
