--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -111,7 +111,7 @@
        }
 
        .footer-bottom {
-           background: var(--dark-gray);
+           background: var(--black);
            width: 100%;
            padding: 1.5rem 0;
            margin-top: 3rem;
@@ -162,7 +162,7 @@
        .copyright,
        .copyright a {
            text-align: center;
-           color: var(--black);
+           color: var(--light);
            text-decoration: none;
        }
 
