--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -89,7 +89,7 @@ h2 {
 
 .hero-banner-btnn {
     display: inline-block;
-    background-color: var(--light-red);
+    background-color: var(--red);
     border: none;
     color: white;
     text-decoration: none;
@@ -102,8 +102,8 @@ h2 {
 }
 
 .hero-banner-btnn:hover {
-    background-color: var(--dark-brown);
-    color: var(--gold);
+    background-color: var(--black);
+    color: var(--beige);
 }
 
 .section {
@@ -116,7 +116,6 @@ h2 {
     margin-bottom: 1rem;
 }
 
-/* double rj-hero banner */
 .rj-dual-hero {
     display: flex;
     min-height: 80vh;
