--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -14,9 +14,9 @@
     --dark-gray: #5a5959;
     --blue: #2563eb;
     --tortoise: #4cc9f0;
-    --red: #db162a;
+    --red: #b00315;
     --light-red: #b72d2d;
-    --dark-red: #ef071e;
+    --dark-red: #e70017;
     --green: #03993f;
     --border-radius: 8px;
     --shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -31,6 +31,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    position: relative;
 }
 
 .container {
