--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -14,9 +14,9 @@
     --dark-gray: #5a5959;
     --blue: #2563eb;
     --tortoise: #4cc9f0;
-    --red: #b00315;
+    --red: #d30217;
     --light-red: #b72d2d;
-    --dark-red: #e70017;
+    --dark-red: #88000e;
     --green: #03993f;
     --border-radius: 8px;
     --shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
