--- a/src/components/styles/CategoryPage.css
+++ b/src/components/styles/CategoryPage.css
@@ -1,8 +1,6 @@
 /* CategoryPage.css */
-
-/* Global Styles */
 .category-page {
-  color: #3E2C1C;
+  color: var(--black);
   overflow-x: hidden;
 }
 
@@ -128,7 +126,7 @@
 
 .parallax-content {
   text-align: center;
-  color: #3E2C1C;
+  color: var(--black);
   z-index: 2;
   max-width: 800px;
 }
@@ -187,21 +185,21 @@
 
 .subcategory-info {
   padding: 1.5rem;
-  color: #000000;
+  color: var(--black);
   text-align: center;
 }
 
 .subcategory-info h2 {
   font-size: 1.5rem;
   margin-bottom: 0.8rem;
-  color: #3E2C1C;
+  color: var(--black);
   font-weight: 700;
 }
 
 .category-primary-btn {
   display: inline-block;
   padding: 10px 20px;
-  background: #3e2c1cc9;
+  background: var(--red);
   color: #fff;
   font-weight: 600;
   text-decoration: none;
@@ -209,7 +207,7 @@
 }
 
 .category-primary-btn:hover {
-  background: #24180e;
+  background: var(--light-red);
 }
 
 @media (max-width: 992px) {
